typescript/checker/tests/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration11.ts.stderr
error: TS1031
 --> $DIR/tests/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration11.ts:3:5
  |
3 |     declare get Foo() { }
  |     ^^^^^^^

error: A 'get' accessor must return a value
 --> $DIR/tests/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration11.ts:3:17
  |
3 |     declare get Foo() { }
  |                 ^^^

